# Valideur_QR

./: .gitignore  CMakeLists.txt  app  test_cpp.cpp
data/: secured_ticket.txt  ticket.txt
keys/: public.pem
src/: backend.cpp  emitter.cpp  main.cpp  receiver.cpp  valideur_receiver.cpp
